<resources>
    <string name="app_name">CheckList</string>
    <string name="maintilte">チェックリスト</string>
    <string name="editbtn">編集</string>
    <string name="addlist">新規リスト</string>
    <string name="cancelbtn">キャンセル</string>
    <string name="addbtn">追加</string>
    <string name="arrow">></string>
    <!-- 詳細ページ戻るbtn -->
    <string name="rtnbtn">戻る</string>
    <string name="detailtitle">追加</string>
    <string name="changebartitle">変更画面</string>
    <string name="changebtn">変更</string>
    <string name="deletebtn">削除</string>
</resources>