<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SummaryPageFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SummaryPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- タイトルバー -->
        <LinearLayout
            android:id="@+id/editbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/maintitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/maintilte"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/editbtn"
                android:layout_width="@dimen/editbtn_width"
                android:layout_height="@dimen/btns_height"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/mainlinear_margin"
                android:padding="0dp"
                android:text="@string/editbtn" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/summaryRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editbar"
            tools:ignore="MissingConstraints" />

        <!-- 新規リストボタン -->
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/mainaddbtn"
                android:layout_width="@dimen/newbtn_width"
                android:layout_height="@dimen/btns_height"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/mainlinear_margin"
                android:padding="0dp"
                android:text="@string/addlist"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>