<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DetailAddFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailAddList">

    <!-- タイトルバー -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/detailaddbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_gravity="start|center_horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/detailcancelbtn"
                android:layout_width="@dimen/editbtn_width"
                android:layout_height="@dimen/btns_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mainlinear_margin"
                android:padding="0dp"
                android:text="@string/rtnbtn" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/detailbartitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailtitle"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/detailaddbtn"
                android:layout_width="@dimen/editbtn_width"
                android:layout_height="@dimen/btns_height"
                android:layout_marginEnd="@dimen/mainlinear_margin"
                android:padding="0dp"
                android:text="@string/addbtn"
                app:iconPadding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailaddbar">

            <EditText
                android:id="@+id/deitailaddtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mainlinear_margin"
                android:layout_marginEnd="@dimen/mainlinear_margin"
                android:layout_weight="1"
                android:ems="10"
                android:hint="タイトル"
                android:inputType="text" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>